kubernetes/environments/production/api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
