kubernetes/environments/production/redis-exporter-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-redis-exporter
spec:
  template:
    spec:
      containers:
        - name: exporter
