kubernetes/environments/production/web-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 4Gi
