kubernetes/environments/production/worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-worker
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: worker
          resources:
            requests:
              cpu: 10m
              memory: 1Gi
            limits:
              cpu: "3"
              memory: 4Gi
