kubernetes/environments/production/zot-exposure.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zot-registry-ingress
  namespace: production
  labels:
    app.kubernetes.io/name: zot
    hivy.io/apply-phase: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zot
      app.kubernetes.io/instance: zot
  ingress:
    - fromCIDR:
        - 10.80.1.2/32
        - 10.80.1.3/32
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
